# internal/models/event.go
@@ -16,12 +16,11 @@ type Event struct {
 	EventName   *string    `json:"event_name"`
 	Description *string    `json:"description"`
 	StartDate   *time.Time `json:"start_date"`
+	IsActive    *bool      `json:"is_active" gorm:"default:true"`
 
-	// Relationships
 	Sessions []AttendanceSession `gorm:"foreignKey:EventID" json:"sessions,omitempty"`
 }
 
-// TableName sets the table name for Event model
 func (Event) TableName() string {
 	return "events"
 }
